fixed calendar half hour too long bug

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,6 +1,41 @@
-/* body {
+body {
   background-image: url("https://images.unsplash.com/photo-1547013035-e12451b7aa36?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1774&q=80");
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   height: 100vh;
-} */
+}
+
+.home-page-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  text-align: center;
+}
+
+.inspire-search {
+  margin-top: 50px;
+  font-size: 3rem;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+  letter-spacing: 2px;
+  color: #333;
+  text-align: center;
+  padding: 100px;
+}
+
+.begin-your-journey {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: grey;
+  background-color: transparent;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer; 
+}
+
+.begin-your-journey:hover {
+  color: darkgreen;
+}
